fixed logo size on mobile

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 .logo img{
-    width: 200px;
+    width: 80%;
     
 }
 
